# aps-deprecated

./: README.md
doc/: .gitignore  aps-spec-1.1.markdown  aps-spec.asciidoc  aps-spec.markdown
example/: demo-client.php  demo-model.php  demo-service.php  demo-worker.php  subset.php
gsd/: .gitignore  Makefile.am  autogen.sh  configure.in
gsd/src/: Makefile.am  gsd.c
pygsd/: aps.py  apstest.py  gsd.py  setup.py
src/: aps-client.php  aps-device.php  aps-functions.php  aps-worker.php
